tweaked bg alignment, changed #main to .main for li issue

--- a/css/lifeofastudent.css
+++ b/css/lifeofastudent.css
@@ -1,12 +1,12 @@
 body{background:url(../images/bg_bodybg.jpg) repeat-x 0 48px;}
-#main h2, h2#menutitle{color:#FFF; text-shadow:0 2px 3px rgba(0,0,0,.5); font-family:'Permanent Marker', helvetica, arial; font-size:3em; margin:51px 0 0 0; padding:.25em .25em .25em 0;}
+.main h2, h2#menutitle{color:#FFF; text-shadow:0 2px 3px rgba(0,0,0,.5); font-family:'Permanent Marker', helvetica, arial; font-size:3em; margin:51px 0 0 0; padding:.25em .25em .25em 0;}
 /* HIDE STUFF */
 #globalnav, #aside {display:none;}
-#main {background:transparent;border:none;box-shadow:none;}
+.main {background:transparent;border:none;box-shadow:none;}
 #section.hasmenu,section.hasmenu,.section.hasmenu{float:none;width:970px; padding:0;}
 /* HORZY NAV */
-.section {margin:0; padding:27px 0 0 0; background:transparent; min-height:800px;}
-.gecko .section, .ie .section {padding-top:12px;}
+.section {margin:0; padding:23px 0 0 0; background:transparent; min-height:800px;}
+.gecko .section, .ie .section {padding-top:7px;}
 .slider {width:960px; overflow:hidden; margin-left:-5px; position:relative; background:transparent;}
 .slidernav {list-style:none; font-size:1em; margin:0 0 50px 0; border-radius:6px; padding:0 10px 0 10px; box-shadow:0 2px 5px rgba(0,0,0,.5); width:940px;
   background-color: #f2f5f6;
@@ -35,7 +35,7 @@ body{background:url(../images/bg_bodybg.jpg) repeat-x 0 48px;}
 #nav_lifeafter:hover, #nav_lifeafter.current {background:#00a6da; text-decoration:none;}
 #nav_finances,#nav_getinvolved,#nav_business,#nav_academicsuccess,#nav_lifeafter {}
 /* TYPOGRAPHY */
-#main h3 {font-weight:normal; font-style:italic; font-size:3em; margin:0 0 .5em 0; color:#FFF; text-shadow:0 2px 3px rgba(0,0,0,.5);  }
+.main h3 {font-weight:normal; font-style:italic; font-size:3em; margin:0 0 .5em 0; color:#FFF; text-shadow:0 2px 3px rgba(0,0,0,.5);  }
 .slide div {box-shadow:0 3px 6px #666; margin-bottom:10px; outline:none;}
 .slide p {padding:1em; margin:0;}
 .slide p img {margin-top:-5px;}
